@@ -1,5 +1,16 @@
 2015-05-21  Csaba Osztrogonác  <ossy@webkit.org>
 
+        [EFL] Remove an unused private field from EwkPopupMenuItem class
+        https://bugs.webkit.org/show_bug.cgi?id=145249
+
+        Reviewed by Gyuyoung Kim.
+
+        * UIProcess/API/efl/ewk_popup_menu.cpp:
+        (EwkPopupMenu::EwkPopupMenu):
+        * UIProcess/API/efl/ewk_popup_menu_private.h:
+
+2015-05-21  Csaba Osztrogonác  <ossy@webkit.org>
+
         [EFL] Fix mismatched-tags warnings in UIProcess/API/efl
         https://bugs.webkit.org/show_bug.cgi?id=145129
 
